<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp" >

    <com.hoyoji.android.hyjframework.view.HyjExpandableListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:drawSelectorOnTop="false" />

    <!-- <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="#E0E0E0"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_listview_no_content" /> -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_gravity="bottom"
        android:layout_marginBottom="48dip"
        android:background="#E0E0E0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/homeListFragment_action_money_expense"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/abc_tab_indicator_ab_holo"
            android:padding="0dp"
            android:text="@string/app_action_money_expense" />

        <Button
            android:id="@+id/homeListFragment_action_money_income"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/abc_tab_indicator_ab_holo"
            android:padding="0dp"
            android:text="@string/app_action_money_income" />

 <!--        <Button
            android:id="@+id/homeListFragment_action_money_transfer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/abc_tab_indicator_ab_holo"
            android:padding="0dp"
            android:text="@string/app_action_money_transfer" /> -->

        <Button
            android:id="@+id/homeListFragment_action_money_debt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/abc_tab_indicator_ab_holo"
            android:padding="0dp"
            android:text="@string/app_action_money_debt" />
        
        <Button
            android:id="@+id/homeListFragment_action_money_topup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/abc_tab_indicator_ab_holo"
            android:padding="0dp"
            android:text="@string/app_action_money_topup" />
        
        <ImageButton
            android:id="@+id/homeListFragment_action_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/abc_tab_indicator_ab_holo"
            android:padding="0dp"
            android:src="@drawable/ic_action_more"
            android:text="@string/app_action_more" />

    </LinearLayout>

</FrameLayout>