<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
   		android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"  >

    <ListView android:id="@id/android:list"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:drawSelectorOnTop="false"
              android:layout_marginBottom="48dip"/>

    <TextView android:id="@id/android:empty"
        	  android:gravity="center_horizontal|center_vertical"
              android:layout_width="match_parent"
              android:layout_height="43dp"
              android:background="#E0E0E0"
              android:text="@string/app_listview_no_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_gravity="bottom"
        android:layout_marginBottom="48dip"
        android:background="#E0E0E0" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/messageListFragment_action_all_messgae"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/abc_tab_indicator_ab_holo"
            android:padding="0dp"
            android:text="@string/all_message" />

        <Button
            android:id="@+id/messageListFragment_action_un_read_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@drawable/abc_tab_indicator_ab_holo"
            android:padding="0dp"
            android:text="@string/un_read_message" />
     </LinearLayout>
</FrameLayout>